@startuml dominio

hide circle
hide methods
hide empty members

skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor #505050
}

class ResolucaoId {
  nome
  versao
}

class Analise {
    id
    instante
    entrada
    saida
    resolucao
}

class Resultado {
    nome do indicador
    valor
}

class Contexto {
  valorPara&#40;nome&#41; : Resultado
}

class "Avaliacao" as AvaliacaoCommand <<Command>> {
    docente
    instante
    requisitadoPor
    resolucao
}

class Avaliacao {
    docente
    instante
    requisitadoPor
    resolucao
    analiseId
}

AvaliacaoCommand o--> Contexto
Avaliacao --> "1" ResolucaoId

rectangle "regras de negócio" #line.dashed {

    interface "Resolução" as ResolucaoCodigo {
        nome
        versão
        ---
        avalia&#40;Avaliacao, Contexto&#41; : Analise
        indicadores&#40;&#41; : Set<String>
    }

    interface Indicador {
        nome : String
        avalia&#40;Contexto&#41; : Resultado
    }
}

ResolucaoCodigo "1" --> "1..*" Indicador : Definida\npor


Contexto --> "1..*" Resultado

Analise o-right-> "1" Contexto : entrada
Analise o-right-> "1" Contexto : saída
Analise --> "1" ResolucaoId
Avaliacao -right-> Analise #line.dashed : Referencia

class Plugin {
  arquivo
  nomeResolucao
  versaoResolucao
}

interface ResolucaoRepository {
  cria&#40;plugin&#41;
  busca&#40;nome, versao&#41; : ResolucaoId
}

interface AvaliacaoRepository {
  busca&#40;docente, data&#41; : [Analise]
  ultimaPara&#40;docente&#41; : Analise
}


@enduml
